fixes overflow on mobile and about centering vert

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -58,6 +58,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: auto 0;
 }
 
 .about__container {
@@ -89,6 +91,9 @@
   .about__container {
     padding: 50px 25px;
   }
+  /* .about__placeholder {
+    margin-top: 100px;
+  } */
 }
 
 @keyframes grow {
