--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 
 html,
 body {
-  overflow-x: hidden;
+  overflow: hidden;
+  height: 100%;
 }
 
 body {
